# Melvin

./: pyproject.toml  video_summary.json
melvin/: __init__.py  __main__.py  cli.py
melvin/tools/: youtube_summarizer.py
melvin/utils/: utils.py
src/tools/: youtube_summarizer.py
tests/: test_melvin.py
