[tool.poetry]
name = "melvin"
version = "0.1.0"
description = "A Personal Assistantant that will help to manage your life and boost your productivity"
authors = ["Mihirsinh Chauhan"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
llama-index = "^0.11.22"
transformers = "^4.46.2"
torch = "^2.5.1"
openai-whisper = "^20240930"
pytube = "^15.0.0"
llama-cpp-python = "^0.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
